<resources>
    <string name="app_name">CoachTicketBookingApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="x_c_nh_n">Xác Nhận</string>
    <string name="ng_nh_p">Đăng Nhập</string>
    <string name="nh_p_email_c_a_b_n">Nhập email của bạn</string>
    <string name="nh_p_m_t_kh_u_c_a_b_n">Nhập mật khẩu của bạn</string>
    <string name="b_n_ch_a_c_t_i_kho_n">Bạn chưa có tài khoản?</string>
    <string name="ng_k_ngay">Đăng ký ngay</string>
    <string name="ng_nh_p1">ĐĂNG NHẬP</string>
    <string name="n_i_xu_t_ph_t">Nơi xuất phát</string>
    <string name="n_i_mu_n_i">Nơi muốn đi</string>
    <string name="ng_y_i_dd_mm_yyyy">Ngày đi (dd/mm/yyyy)</string>
    <string name="kh_h_i">Khứ hồi</string>
    <string name="t_m_chuy_n_xe">TÌM CHUYẾN XE</string>
    <string name="t_m_ki_m">TÌM KIẾM</string>
    <string name="v_c_a_t_i">VÉ CỦA TÔI</string>
    <string name="t_i_kho_n">TÀI KHOẢN</string>
    <string name="x_c_nh_n1">Xác Nhận</string>
    <string name="n">Nữ</string>
    <string name="nam">Nam</string>
    <string name="gi_i_t_nh">Giới Tính</string>
    <string name="nh_p_a_ch_email">Nhập địa chỉ email</string>
    <string name="ng_k">Đăng Ký</string>
    <string name="nh_p_h_v_t_n_ng_i_d_ng">Nhập họ và tên người dùng</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="nh_p_s_i_n_tho_i">Nhập số điện thoại</string>
    <string name="b_n_c_t_i_kho_n">Bạn đã có tài khoản?</string>
    <string name="ng_nh_p_ngay">Đăng nhập ngay</string>
    <string name="vui_l_ng_ng_nh_p_t_i_kho_n">VUI LÒNG ĐĂNG NHẬP TÀI KHOẢN!!!</string>
    <string name="ng_nh_p2">ĐĂNG NHẬP</string>
    <string name="thay_i">Thay đổi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


        <string-array name="gender_options">
            <item>Nam</item>
            <item>Nữ</item>
        </string-array>

</resources>