<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerbackground"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:id="@+id/txtLinkToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:linksClickable="true"
        android:text="@string/ng_nh_p_ngay"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/b_n_c_t_i_kho_n"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="312dp"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nh_p_s_i_n_tho_i"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="204dp"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableLeft="@drawable/baseline_priority_high_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nh_p_l_i_m_t_kh_u"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:password="true"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nh_p_m_t_kh_u"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:password="true"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nh_p_h_v_t_n_ng_i_d_ng"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="93dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-light"
        android:fontFeatureSettings="@string/app_name"
        android:gravity="center"
        android:text="@string/ng_k"
        android:textColor="@color/material_dynamic_neutral_variant30"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nh_p_a_ch_email"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="107dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/gi_i_t_nh"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:minHeight="48dp"
        android:text="@string/nam"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:minHeight="48dp"
        android:text="@string/n"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <Button
        android:id="@+id/button"
        android:layout_width="272dp"
        android:layout_height="53dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonui"
        android:fontFamily="sans-serif-medium"
        android:text="@string/x_c_nh_n1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

</androidx.constraintlayout.widget.ConstraintLayout>