<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NolgTicket"
    tools:ignore="ExtraText"
    android:background="@drawable/registerbackground">

    <TextView
        android:id="@+id/textViewLoginPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vui_l_ng_ng_nh_p_t_i_kho_n"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_error"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_nh_p2"
        android:textColor="@android:color/white"
        android:background="@color/design_default_color_primary"
        android:layout_below="@id/textViewLoginPrompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary">

        <Button
            android:id="@+id/buttonTimKiem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t_m_ki_m"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonVeCuaToi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v_c_a_t_i"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonTaiKhoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t_i_kho_n"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</RelativeLayout>