<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Welcomepage"
    tools:ignore="ExtraText"
    android:background="@drawable/registerbackground">

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">


        <EditText
            android:id="@+id/editTextNoiXuatPhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_i_xu_t_ph_t"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:drawablePadding="8dp"
            android:singleLine="true"
            android:drawableLeft="@android:drawable/ic_menu_myplaces" />

        <EditText
            android:id="@+id/editTextNoiDen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_i_mu_n_i"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:drawablePadding="8dp"
            android:singleLine="true"
            android:drawableLeft="@android:drawable/ic_menu_myplaces" />

        <EditText
            android:id="@+id/editTextNgayDi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ng_y_i_dd_mm_yyyy"
            android:padding="12dp"
            android:drawableLeft="@android:drawable/ic_menu_month"
            android:singleLine="true"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:drawablePadding="8dp"/>

        <Switch
            android:id="@+id/switchKhuhoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kh_h_i"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/buttonTimChuyenXe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_m_chuy_n_xe"
            android:backgroundTint="@color/design_default_color_primary"
            android:textColor="@android:color/white"
            android:padding="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/locationSelectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary">

        <Button
            android:id="@+id/buttonTimKiem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t_m_ki_m"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonVeCuaToi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v_c_a_t_i"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonTaiKhoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t_i_kho_n"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</RelativeLayout>