<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LgAccount"
    tools:ignore="ExtraText"
    android:background="@drawable/registerbackground">

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary">

        <Button
            android:id="@+id/buttonTimKiem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t_m_ki_m"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonVeCuaToi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v_c_a_t_i"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonTaiKhoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/t_i_kho_n"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</RelativeLayout>