<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".ui.LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/loginbackground"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="273dp"
            android:layout_height="66dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonui"
            android:text="@string/x_c_nh_n"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="233dp"
            android:layout_height="93dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-light"
            android:fontFeatureSettings="@string/app_name"
            android:gravity="center"
            android:text="@string/ng_nh_p"
            android:textColor="@color/material_dynamic_neutral_variant30"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="58dp"
            android:layout_height="51dp"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/emailicon" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="58dp"
            android:layout_height="51dp"
            android:layout_marginTop="176dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lockicon" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="343dp"
            android:layout_height="49dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/nh_p_email_c_a_b_n"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="343dp"
            android:layout_height="49dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/nh_p_m_t_kh_u_c_a_b_n"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imgEyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_visibility_off_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@android:color/system_accent2_100">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"

            android:text="@string/b_n_ch_a_c_t_i_kho_n"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvLinkToReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/ng_k_ngay"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>